<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/roadbed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_roadbed" />

<!--    <RadioGroup-->
<!--        android:id="@+id/radioGroup"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal">-->

<!--        <RadioButton-->
<!--            android:id="@+id/radioButton19roadbed"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="19路盤" />-->

<!--        <RadioButton-->
<!--            android:id="@+id/radioButton15roadbed"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="15路盤" />-->

<!--        <RadioButton-->
<!--            android:id="@+id/radioButton13roadbed"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="13路盤" />-->

<!--        <RadioButton-->
<!--            android:id="@+id/radioButton9roadbed"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="9路盤" />-->
<!--    </RadioGroup>-->

    <EditText
        android:id="@+id/forbiddenHand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_forbiddenHandTitle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/ForbiddenHand33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_forbiddenHand33" />

        <CheckBox
            android:id="@+id/checkBox33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/app_forbiddenHand" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/ForbiddenHand44"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_forbiddenHand44" />

        <CheckBox
            android:id="@+id/checkBox44"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/app_forbiddenHand" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/ForbiddenHandChohren"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_forbiddenHandChohren" />

        <CheckBox
            android:id="@+id/checkBoxChohren"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:enabled="false"
            android:text="@string/app_forbiddenHand" />
    </LinearLayout>


</LinearLayout>